test/errors/error45.base
The pattern cannot be matched with the input expression because it has different number of elements.
  match (x) {
    (1, 2) -> return 0;
     ^^^^
